@@ -1,0 +1,7 @@
+package io.getstream.chat.android.client.events
+
+import io.getstream.chat.android.client.models.User
+
+interface UserEvent {
+    val user: User
+}
