@@ -2,6 +2,7 @@
 
 - Convert ChatError to plain class. Changes in ChatLogger interface.
 - Update events fields related to read status - remove "unread_messages" field and add "unread_channels" to NewMessageEvent, NotificationMarkReadEvent, and NotificationMessageNewEvent
+- Mark ChatEvents containing the user property by the UserEvent interface.
 
 # 1.15.5 - Fri 18 Sep 2020
 
